fix(theme): break long links on overflow

--- a/packages/theme/src/client/styles/normalize.scss
+++ b/packages/theme/src/client/styles/normalize.scss
@@ -26,6 +26,7 @@ a {
   font-weight: 500;
   color: var(--accent-color);
   text-decoration: none;
+  overflow-wrap: break-word;
 }
 
 p a code {
